# wRPC

./: CMakeLists.txt  README.md
Wrocket/common/: log.cc  log.h  util.cc  util.h
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
src/: CMakeLists.txt  logger.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  safequeue.cc  wrpcapplication.cc  wrpcchannel.cc  wrpcconfig.cc  wrpccontroller.cc  zookeeperutil.cc
src/include/: logger.h  rpcheader.pb.h  rpcprovider.h  safequeue.h  wrpcapplication.h  wrpcchannel.h  wrpcconfig.h  wrpccontroller.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
